= master

* Allow set_layout_opts in view_options plugin to override layout if render plugin :layout option is given (jeremyevans)

* Add route_block_args plugin to control which arguments are yielded to the route block (jeremyevans, chrisfrank) (#159)

= 3.16.0 (2019-01-18)

* Add mail_processor plugin for processing mail using a routing tree (jeremyevans)

= 3.15.0 (2018-12-14)

* Support render plugin :escape option to be a string or array of strings and only add :escape option for those template engines (jeremyevans) (#158)

* Add :skip_missing option to convert!/convert_each! in the typecast_params plugin to support not storing keys not present in params (jeremyevans)

= 3.14.1 (2018-11-29)

* SECURITY: content_for plugin no longer post-processes block result with template engine (jeremyevans)

= 3.14.0 (2018-11-16)

* Add :raise option to convert!/convert_each! in the typecast_params plugin to support not raising for missing keys (celsworth) (#153)

* Do not persist convert!/convert_each! :symbolize setting in the typecast_params plugin (jeremyevans)

= 3.13.0 (2018-10-12)

* Make Stream#write in streaming plugin return number of bytes written instead of self, so it works with IO.copy_stream (jeremyevans)

* Add exception_page plugin for showing a page with debugging information for a given exception (jeremyevans)

* Make common_logger plugin handle raised errors (jeremyevans)

= 3.12.0 (2018-09-14)

* Add common_logger plugin for common log support (jeremyevans)

= 3.11.0 (2018-08-15)

* Disable default compression of sessions over 128 bytes in the sessions plugin (jeremyevans)

* Log but otherwise ignore exceptions raised by after processing of error handler response (jeremyevans)

* Modify internal before/after processing to avoid plugin load order issues (jeremyevans)

= 3.10.0 (2018-07-18)

* Remove flash key from session if new flash is empty when rotating flash (jeremyevans)
